--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
     "json-server": "^0.17.4",
+    "rc-tooltip": "^6.1.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
